overflow hidden bug on social buttons

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -254,7 +254,6 @@ input.field:focus {
 	padding: 26px 0;
 	vertical-align: middle;
 	text-align: center;
-	overflow: hidden;
 }
 
 footer {
